Fix Safari word wrap issue

--- a/src/styles/editor.styl
+++ b/src/styles/editor.styl
@@ -8,6 +8,8 @@
   border-radius(3px)
   .codeflask
     background transparent
+  .codeflask__flatten
+    word-wrap normal
   .codeflask__textarea
     color transparent
   .token
